[package]
name = "rust_postgress_new"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"]}
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
futures = "0.3.24"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0.86"
rayon = "1.5.3"